Move jetty server code into its own directory. This will allow for another version of backend.